[gd_scene load_steps=23 format=2]

[ext_resource path="res://Enemies/Random/Demon Eye/DemonEye.gd" type="Script" id=1]
[ext_resource path="res://Enemies/Random/Demon Eye/idle2.png" type="Texture" id=2]
[ext_resource path="res://Enemies/Random/Demon Eye/idle1-sheet.png" type="Texture" id=3]
[ext_resource path="res://Enemies/Random/Demon Eye/idle3.png" type="Texture" id=4]
[ext_resource path="res://Mechanics/Hitbox and Hurbox/Hurtbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Mechanics/Gold Generation/GoldGenerator.tscn" type="PackedScene" id=6]
[ext_resource path="res://Mechanics/Stats/Stats.tscn" type="PackedScene" id=7]
[ext_resource path="res://Mechanics/Player Detection Zone/PlayerDetectionZone.tscn" type="PackedScene" id=8]
[ext_resource path="res://Mechanics/Hitbox and Hurbox/Hitbox.tscn" type="PackedScene" id=9]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), ExtResource( 4 ), ExtResource( 2 ) ],
"loop": true,
"name": "Idle",
"speed": 3.0
}, {
"frames": [ SubResource( 2 ), SubResource( 1 ) ],
"loop": false,
"name": "LookLeft",
"speed": 2.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ) ],
"loop": false,
"name": "LookRight",
"speed": 2.0
} ]

[sub_resource type="CapsuleShape2D" id=8]
radius = 6.0
height = 2.0

[sub_resource type="CircleShape2D" id=11]
radius = 9.0

[sub_resource type="CircleShape2D" id=12]
radius = 8.0

[sub_resource type="CapsuleShape2D" id=13]
radius = 34.0
height = 185.0

[node name="DemonEye" type="KinematicBody2D"]
collision_layer = 144
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 7 )
animation = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 8 )

[node name="Hurtbox" parent="." instance=ExtResource( 5 )]

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
modulate = Color( 0, 1, 0.109804, 1 )
position = Vector2( 0, 1 )
shape = SubResource( 11 )

[node name="Hitbox" parent="." instance=ExtResource( 9 )]
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, 1 )
shape = SubResource( 12 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 8 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
modulate = Color( 0, 0.156863, 1, 1 )
position = Vector2( 0, -26 )
rotation = -1.5708
shape = SubResource( 13 )

[node name="Stats" parent="." instance=ExtResource( 7 )]
max_health = 3

[node name="GoldGenerator" parent="." instance=ExtResource( 6 )]
MAX = 3
MIN = 1

[node name="AttackRate" type="Timer" parent="."]
wait_time = 1.1
one_shot = true

[editable path="Hurtbox"]
[editable path="Hitbox"]
[editable path="PlayerDetectionZone"]
